# EarthOpenGL

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: simple.frag  simple.vert
ext/ObjFormat/: ObjFormat.cpp  ObjUtil.h
ext/SOIL/: CMakeLists.txt
ext/glbinding/: CMakeLists.txt
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  opengl.h  shader.cpp  shader.h  trackball.cpp  trackball.h  viewer.cpp  viewer.h
